objects/LLC_BI__Product_Feature__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Is_Floor_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used to specify a product feature that specifies a product as a dealer floor plan product.</description>
        <inlineHelpText>Indicates if product is a dealer floor product.</inlineHelpText>
        <label>Is Floor Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Guidance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. When enabled, it is used as a flag for the product feature to specify a product as a Guidance Line. When disabled, it is used as a flag to say the product is not a Guidance Line. By default, it is disabled. No logic is run on this field.</description>
        <label>Is Guidance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox field is manually selected. When enabled, it is used as a flag for the product feature to specify a product as a Lease. This information is used to display the asset route on loan and product package navigation. When disabled, a loan with that product feature does not show the asset route. By default, it is disabled.</description>
        <label>Is Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Letter_of_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. When enabled, it is used as a flag for the product feature to specify a product as a Letter of Credit. When disabled, it is used as a flag to say the product is not a Letter of Credit. By default, it is disabled. No logic is run on this field.</description>
        <label>Is Letter of Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. When enabled, it specifies a product feature that specifies a product as a Limit (the secondary level in a multi-tier loan structure). This information is used to determine how to display product hiearchies visually. When disabled, it is not used. By default, it is disabled.</description>
        <label>Is Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Lockbox_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required and is manually populated. When true, it denotes whether a product is a lockbox treasury service.</description>
        <label>Is Lockbox Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Main__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. When enabled, it specifies a product feature that specifies a product as a Main Facility (the highest level in a multi-tier loan structure). This information is used to determine how to display product hiearchies visually. When disabled, it is not used. By default, it is disabled.</description>
        <label>Is Main</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Miscellaneous_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required and is manually populated. When true, it denotes whether a product is a miscellaneous treasury service.</description>
        <label>Is Miscellaneous Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Non_Revolving__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. When enabled, it is used as a flag for the product feature to specify a product as a Non-revolving Line of Credit. When disabled, it is used as a flag to say the product is not a Non-revolving Line of Credit. By default, it is disabled. No logic is run on this field.</description>
        <label>Is Non Revolving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Online_Banking_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required and is manually populated. When true, it denotes whether a product is an online banking treasury service.</description>
        <label>Is Online Banking Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Reconciliation_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required and is manually populated. When true, it denotes whether a product is a reconcilliation treasury service.</description>
        <label>Is Reconciliation Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Regular_Future__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. When enabled, it is used as a flag for the product feature to specify a product as a Regular Future. When disabled, it is used as a flag to say the product is not a Regular Future. By default, it is disabled. No logic is run on this field.</description>
        <label>Is Regular Future</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Regular__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. When enabled, it is used as a flag for the product feature to specify a product as a Regular. When disabled, it is used as a flag to say the product is not a Regular. By default, it is disabled. No logic is run on this field.</description>
        <label>Is Regular</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Remote_Deposit_Capture_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required and is manually populated. When true, it denotes whether a product is a remote deposit capture treasury service.</description>
        <label>Is Remote Deposit Capture Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Reporting_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required and is manually populated. When true, it denotes whether a product is a reporting treasury service.</description>
        <label>Is Reporting Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Revolving__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. When enabled, it is used as a flag for the product feature to specify a product as a Revolving Line of Credit. When disabled, it is used as a flag to say the product is not a Revolving Line of Credit. By default, it is disabled. No logic is run on this field.</description>
        <label>Is Revolving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Standby__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required and is manually populated. This field is only used as a data point currently. A standby letter of credit (SLOC) is a guarantee of payment issued by a bank on behalf of a client that is used as &quot;payment of last resort&quot; should the client fail to fulfill a contractual commitment with a third party.</description>
        <label>Is Standby</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Subject_To_TRID_Tolerances__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this optional checkbox to indicate a loan originated from this product hierarchy is subject to TRID tolerances. By default, this field is deselected.</description>
        <inlineHelpText>Select this checkbox if the loan is subject to TRID tolerances.</inlineHelpText>
        <label>Subject To TRID Tolerances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Sublimit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. When enabled, it specifies a product feature that specifies a product as a Sublimit (the 3rd level in a multi-tier loan structure, under Limit). This information is used to determine how to display product hierarchies visually. When disabled, it is not used. By default, it is disabled.</description>
        <label>Is Sub Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Sweep_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required and is manually populated. When true, it denotes whether a product is a sweep treasury service.</description>
        <label>Is Sweep Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Syndication_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required and is manually populated. When true, this field indicates that the product this feature is for is a syndicated loan (which is a bank facility that is offered by a group of lenders). Additionally, it indicates that the financial institution this product feature is for is the primary agent of the syndicated loan. The agent is a lead bank or underwriter of the loan, known as the arranger, the agent or the lead lender. This lender may put up a proportionally bigger share of the loan, or it may perform duties such as dispersing cash flows among the other syndicate members and administrative tasks.</description>
        <label>Is Syndication Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Syndication_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required and is manually populated. When true, this field indicates that the product this product feature is for is a syndicated loan (which is a bank facility that is offered by a group of lenders). Additionally, it indicates that the financial institution this product feature is for is a contribituing member of the syndicated loan, but not the primary agent.</description>
        <label>Is Syndication Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Term_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. When enabled, it is used as a flag for the product feature to specify a product as part of a Term Loan. When disabled, it is used as a flag to say the product is not part of a Term Loan. By default, it is disabled. No logic is run on this field.</description>
        <label>Is Term Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Wire_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required. and is manually populated. When true, it denotes whether a product is a wire treasury service.</description>
        <label>Is Wire Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Zero_Balance_Account_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required and is manually populated. When true, it denotes whether a product is a zero balance account clearing house treasury service.</description>
        <label>Is Zero Balance Account Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Line_Of_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. When enabled, this product feature specifies that a product is a line of credit. This flag is used to override the relationship stats criteria &quot;UsePrincipalBalance=true&quot;, so that a line of credit product always uses &quot;Original Amount&quot; for exposure calculations. Additionally, the LLC_BI__Current_LTV__c on Loan uses Original Amount for its calculation. When disabled, the relationship stats criteria is not overwritten, and an exposure calculation with &quot;UsePrincipalBalance=true&quot; criteria will use the principal balance. Similarly, LLC_BI__Current_LTV__c will use principal balance for its calculation. By default, this is disabled.</description>
        <inlineHelpText>After changing this field, go to the nCino Administration tab then run Install Updates and Install Batch Updates if this feature is related to products which are related to existing loans.</inlineHelpText>
        <label>Line Of Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Matrix_Calculation_Method__c</fullName>
        <description>Administrators populate this picklist to determine if the loan in association uses either Matrix Management or Rule Engine.</description>
        <inlineHelpText>Select the matrix calculation method of the associated loan.</inlineHelpText>
        <label>Matrix Calculation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rule Engine</fullName>
                    <default>true</default>
                    <label>Rule Engine</label>
                </value>
                <value>
                    <fullName>Matrix Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Balance_Tiered_Account__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It designates the amount of the maximum tier balance that may be in the account in order to earn the disclosed rate for that tier. This is the high end dollar amount for a given tier.</description>
        <inlineHelpText>The amount of the maximum tier balance that may be in the account in order to earn the disclosed rate for that tier. This is the high end dollar amount for a given tier.</inlineHelpText>
        <label>Maximum Balance Tiered Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Rate_Increase__c</fullName>
        <description>The administrator populates this optional field with the maximum value the interest rate may increase from the specified teaser rate during the term of the loan.</description>
        <inlineHelpText>This field displays the maximum value the interest rate may increase from the specified teaser rate during the term of the loan.</inlineHelpText>
        <label>Maximum Rate Increase</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Balance_Tiered_Account__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the amount of the minimum tier balance that must be in the account in order to earn the disclosed rate for that tier. This is the low end dollar amount for a given tier.</description>
        <inlineHelpText>The amount of the minimum tier balance that must be in the account in order to earn the disclosed rate for that tier. This is the low end dollar amount for a given tier.</inlineHelpText>
        <label>Minimum Balance Tiered Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Payment__c</fullName>
        <description>Use this optional currency field to sets a minimum payment amount.</description>
        <inlineHelpText>Use this optional currency field to sets a minimum payment amount.</inlineHelpText>
        <label>Minimum Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Rate__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It is the lowest interest rate that can apply to the account.</description>
        <inlineHelpText>The lowest interest rate that can apply to the account.</inlineHelpText>
        <label>Minimum Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Interest_Rate_Field__c</fullName>
        <description>Administrators populate this field with the API name of the formula field that the system uses to convert an annual interest rate to a monthly interest rate in Rate &amp; Payment Structures when the default equation Annual Interest Rate / 12 = Monthly Interest Rate is not applicable. By default, it is is blank.</description>
        <inlineHelpText>To use a custom monthly interest rate calculation in Rate &amp; Payment Structures, enter the API name of a formula field for the system to convert the annual interest rate to the monthly interest rate.</inlineHelpText>
        <label>Monthly Interest Rate Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Loan_Additional_Fields__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>tbd</description>
        <label>New Loan Additional Fields</label>
        <referenceTo>nFORCE__Screen__c</referenceTo>
        <relationshipName>Product_Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional checkbox field ensures payment is recalculated when interest changes.</description>
        <inlineHelpText>This optional checkbox field ensures payment is recalculated when interest changes.</inlineHelpText>
        <label>New Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Note_Advance_Type__c</fullName>
        <description>This picklist is used to indicate a product feature that specifies the advance type is used for a note.</description>
        <inlineHelpText>Specifies the advance type is used for a note.</inlineHelpText>
        <label>Note Advance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Advances</fullName>
                </value>
                <value>
                    <fullName>Revolving Advances</fullName>
                </value>
                <value>
                    <fullName>Non-Revolving Advances</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Advances</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Notice_Account_Maturity_Type__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the alternate maturity of an account if any. This only applies to notice accounts.</description>
        <inlineHelpText>Specifies the alternate maturity of an account if any. This only applies to notice accounts.</inlineHelpText>
        <label>Notice Account Maturity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Period</fullName>
                </value>
                <value>
                    <fullName>No Alternate Maturity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Compounding_Frequency_Time_Period__c</fullName>
        <description>This is the number of periods (without units) used for the compounding frequency when the type &quot;Other&quot; was selected for the compounding frequency. For example, &quot;6&quot; for a 6 month, or &quot;1&quot; for 1 Year. This will be used when calculating the IRA financial disclosure as well as included on the certificate of deposit.</description>
        <label>Other Compounding Frequency Time Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Other_Crediting_Frequency__c</fullName>
        <description>This is the description of a non-standard crediting frequency such as every 45 days. The data will complete the sentence describing compounding frequency and the method by which earnings are paid. For example, &quot;Interest will be compounding daily and paid by check every 45 days.&quot;</description>
        <label>Other Crediting Frequency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Payment_Begin_Adjustment__c</fullName>
        <description>This optional number field captures the date adjustment for payments to begin.</description>
        <inlineHelpText>This optional number field captures the date adjustment for payments to begin.</inlineHelpText>
        <label>Payment Begin Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Payment_Calculation_Basis__c</fullName>
        <description>Administrators populate this optional picklist field to identify the payment calculation basis of the loan, including the flat amount, the percent of principal, and percent of outstanding. By default, it is blank.</description>
        <inlineHelpText>Administrators populate this optional picklist field to identify the payment calculation basis of the loan, including the flat amount, the percent of principal, and percent of outstanding. By default, it is blank.</inlineHelpText>
        <label>Payment Calculation Basis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Amount</fullName>
                </value>
                <value>
                    <fullName>Percent of Principal</fullName>
                </value>
                <value>
                    <fullName>Percent of Outstanding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Payment_Calculation_Percent__c</fullName>
        <description>Administrators populate this optional percent field with the desired payment percentage value. The percentage value will be applied to the payment amount. By default, it is blank.</description>
        <inlineHelpText>Administrators populate this optional percent field with the desired payment percentage value. The percentage value will be applied to the payment amount. By default, it is blank.</inlineHelpText>
        <label>Payment Calculation Percent</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Payment_Type__c</fullName>
        <description>This optional picklist field captures the method for calculating payments.</description>
        <inlineHelpText>This optional picklist field captures the method for calculating payments.</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FixedPmt</fullName>
                    <label>Fixed Payment</label>
                </value>
                <value>
                    <fullName>PayInt</fullName>
                    <label>Pay Interest</label>
                </value>
                <value>
                    <fullName>PayPrin</fullName>
                    <label>Pay Principle</label>
                </value>
                <value>
                    <fullName>CalcPmt</fullName>
                    <label>Calculated Payment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Payments_Per_Year__c</fullName>
        <description>This optional number field determines the number of payments per year.</description>
        <inlineHelpText>This optional number field determines the number of payments per year.</inlineHelpText>
        <label>Payments Per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Periodic_Change_Limit_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. If enabled, there is a limit to the amount that a variable rate can change over successive specified periods. If disabled, this field is not used. By default, it is disabled.</description>
        <inlineHelpText>If true there is a limit to the amount that a variable rate can change over successive specified periods.</inlineHelpText>
        <label>Periodic Change Limit Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Periods_Between_Rate_Changes__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is the number of periods between periodic rate changes.</description>
        <inlineHelpText>The number of periods between periodic rate changes.</inlineHelpText>
        <label>Periods Between Rate Changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Permanent_Rate_Effective_Date__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It is the day on which the regular interest rate takes effect on a variable rate account having a different/special initial or promotional rate (for example, the date corresponding to the day after expiration of initial rate period for the specified account).</description>
        <inlineHelpText>The day on which the regular interest rate takes effect on a variable rate account having a different/special initial or promotional rate (i.e. the date corresponding to the day after expiration of initial rate period for the specified account).</inlineHelpText>
        <label>Permanent Rate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Prepaid_Interest_Accrual_Code__c</fullName>
        <description>Users populate this optional picklist field to define the accrual code the system uses to calculate the prepaid interest due at closing. By default, this field is blank.</description>
        <inlineHelpText>Select the desired accrual code to calculate the prepaid interest due at closing.</inlineHelpText>
        <label>Prepaid Interest Accrual Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True360_360</fullName>
                </value>
                <value>
                    <fullName>True360_365</fullName>
                </value>
                <value>
                    <fullName>Actual_360</fullName>
                </value>
                <value>
                    <fullName>True365_360</fullName>
                </value>
                <value>
                    <fullName>Actual_365</fullName>
                </value>
                <value>
                    <fullName>True365_365</fullName>
                </value>
                <value>
                    <fullName>Actual_Actual</fullName>
                </value>
                <value>
                    <fullName>Midnight_366</fullName>
                </value>
                <value>
                    <fullName>Actual_Variable_Days_Per_Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Pricing_Support_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Checkbox field will be selected as True if the product is supported by Commercial Pricing and Profitability Pricing calculations, and False if only Profitability calculations are supported for this product.</description>
        <label>Is Pricing Supported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Term_Type__c</fullName>
        <description>Product Term Type</description>
        <inlineHelpText>This is the time period used to describe the length of a Certificate term, which is used in conjunction with the number of such periods.</inlineHelpText>
        <label>Product Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Quarter(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Purpose_Code__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to determine what the purpose code is for a group of products.</description>
        <label>Purpose Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Change_Percent__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It is the amount by which a variable rate may change within the specified term.</description>
        <inlineHelpText>The amount by which a variable rate may change within the specified term.</inlineHelpText>
        <label>Rate Change Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Change_Period_Type__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the period of time between periodic rate changes.</description>
        <inlineHelpText>Specifies the period of time between periodic rate changes.</inlineHelpText>
        <label>Rate Change Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Change_Period__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies how often the variable rate can change.</description>
        <inlineHelpText>Specifies how often the variable rate can change.</inlineHelpText>
        <label>Rate Change Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Every Other Week</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>At any time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Maximum_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. If enabled, a rate ceiling applies on the account. If disabled, this field is not used. By default, it is disabled.</description>
        <inlineHelpText>If true a rate ceiling applies on the account.</inlineHelpText>
        <label>Rate Maximum Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Maximum__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the highest interest rate that can apply to the account.</description>
        <inlineHelpText>The highest interest rate that can apply to the account.</inlineHelpText>
        <label>Rate Maximum</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Rate_Minimum_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. If true, a rate floor applies to the account. If disabled, this field is not used. By default, it is disabled.</description>
        <inlineHelpText>If true a rate floor applies to the account.</inlineHelpText>
        <label>Rate Minimum Indicator</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>